Controllers refactored
